<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/album_cover"
            android:layout_width="109dp"
            android:layout_height="102dp"
            android:layout_gravity="left"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="40dp"
            tools:src="@drawable/song1" />

        <TextView
            android:id="@+id/art_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="-100dp"
            android:text="@string/backstreet_boys" />

        <TextView
            android:id="@+id/trackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="0dp"
            android:text="@string/everybody_backstreet_s_back" />
        <TextView
            android:id="@+id/trackPriceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="130dp"
            android:text="@string/track_price"/>

        <TextView
            android:id="@+id/trackPrice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="235dp"
            android:layout_marginTop="-24dp"
            android:text="@string/_2_99" />
    </LinearLayout>

</androidx.cardview.widget.CardView>