<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mysia_itunes.MainActivity">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/mainLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/rockLinear"
            android:layout_width="80dp"
            android:layout_height="115dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tab1"
                android:layout_width="72dp"
                android:layout_height="90dp"
                android:src="@drawable/headphones" />

            <TextView
                android:id="@+id/rock_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rock_title"
                android:textColor="#FF007F"

                />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/classicLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tab2"
                android:layout_width="81dp"
                android:layout_height="90dp"
                android:src="@drawable/bars" />

            <TextView
                android:id="@+id/classic_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classic_title"
                android:textColor="#B266FF"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/popLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tab3"
                android:layout_width="82dp"
                android:layout_height="90dp"
                android:src="@drawable/mic" />

            <TextView
                android:id="@+id/pop_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pop_title"
                android:textColor="#00CC00"

                />

        </LinearLayout>


    </LinearLayout>


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLinear" />

</androidx.constraintlayout.widget.ConstraintLayout>